# Mini-search-engine

./: CMakeLists.txt  Makefile  README.docx  interface.c  main.c  pairingheap.c  pairingheap.h  postinglist.c  postinglist.h  trie.c  trie.h  util.c  util.h
